--- a/src/index.html
+++ b/src/index.html
@@ -257,7 +257,7 @@
     <!-- slider section end -->
 
     <!-- about section start -->
-    <section class="py-120">
+    <section class="py-120 overflow-hidden">
       <div class="cont grid grid-cols-12 lg:gap-4 gap-7">
         <div class="col-span-12 lg:col-span-6 xl:col-span-5 relative xs:flex lg:justify-end">          
             <div class="fade_anim" data-fade-from="right" data-delay=".4">
