--- a/src/blogs.html
+++ b/src/blogs.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="WellHub is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
+    <meta name="description" content="WellHub is a modern Physiotherapy and Psychology Rehabilitation theme designed for Physiotherapy, websites. Get a responsive, SEO-friendly design with Spa-focused features." />
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="assets/fonts/hugeicon.min.css" />
     <link rel="stylesheet" href="./assets/css/swiper.min.css" />
     <link rel="stylesheet" href="./assets/css/glightbox.css" />
-    <title>Blogs - WellHub - Agriculture &amp; Organic Farm HTML Theme</title>
+    <title>Blogs - WellHub - Physiotherapy &amp; Psychology Rehabilitation HTML Theme</title>
   </head>
 
   <body>
@@ -29,8 +29,8 @@
         <div class="text-neutral-0 relative z-[1] reveal_anim" data-reveal-from="bottom">
           <h2 class="mb-5">Blogs</h2>
           <div class="font-semibold flex justify-center items-center gap-2">
-            <a href="index.html">Home</a> &gt;
-            <span class="text-yellow-200">Blogs</span>
+            <a href="index.html" class="uppercase">Home</a> <i class="hgi hgi-stroke hgi-arrow-right-01"></i>
+            <span class="text-yellow-200 uppercase">Blogs</span>
           </div>
         </div>
       </div>
@@ -126,7 +126,7 @@
                 <i class="hgi-stroke hgi-calendar-03 text-yellow-200 text-lg"></i>
                 <span class="font-medium">June 7, 2025</span>
               </p>
-              <a href="blog-details.html" class="h4 mb-5 block">The importance of crop rotation in agriculture.</a>
+              <a href="blog-details.html" class="h4 mb-5 block">The importance of crop rotation in Physiotherapy.</a>
               <span class="h-px w-full block bg-neutral-40 mb-7 relative after:absolute after:w-32 after:h-2 after:bg-yellow-200 after:top-full after:left-0 after:-skew-x-[22deg]"></span>
               <p class="text-lg text-neutral-600 line-clamp-2">Learn the importance of crop rotation for a healthy and thriving agricultural ecosystem.</p>
             </div>
