--- a/src/index-2.html
+++ b/src/index-2.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="WellHub is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
+    <meta name="description" content="WellHub is a modern Physiotherapy and Psychology Rehabilitation theme designed for Physiotherapy, websites. Get a responsive, SEO-friendly design with Spa-focused features." />
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="assets/fonts/hugeicon.min.css" />
     <link rel="stylesheet" href="./assets/css/swiper.min.css" />
     <link rel="stylesheet" href="./assets/css/glightbox.css" />
-    <title>Home - WellHub - Agriculture &amp; Organic Farm HTML Theme</title>
+    <title>Home - WellHub - Physiotherapy &amp; Psychology Rehabilitation HTML Theme</title>
   </head>
 
   <body>
@@ -90,7 +90,7 @@
           <div class="bg-green-50 rounded-xl border border-green-75 p-4 xl:p-6 relative reveal_anim" data-reveal-from="top">
             <svg class="absolute right-3 top-3 rotate-45" xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="#000000" viewBox="0 0 256 256"><path d="M215.39,163.06A8,8,0,0,1,208,168H48a8,8,0,0,1-5.66-14.66l80-80a8,8,0,0,1,11.32,0l80,80A8,8,0,0,1,215.39,163.06Z"></path></svg>
             <span class="text-8xl block mt-12 xl:mt-16 md:text-[140px] font-roboto leading-none font-bold text-green-500 text-center">22</span>
-            <p class="text-sm font-medium">YEARS OF AGRICULTURE EXPERIENCE</p>
+            <p class="text-sm font-medium">YEARS OF Physiotherapy EXPERIENCE</p>
           </div>
           <div class="bg-green-50 rounded-xl border border-green-75 p-4 xl:p-6 relative reveal_anim" data-reveal-from="bottom">
             <svg class="absolute right-3 top-3 rotate-45" xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="#000000" viewBox="0 0 256 256"><path d="M215.39,163.06A8,8,0,0,1,208,168H48a8,8,0,0,1-5.66-14.66l80-80a8,8,0,0,1,11.32,0l80,80A8,8,0,0,1,215.39,163.06Z"></path></svg>
@@ -112,7 +112,7 @@
           <div class="bg-green-50 rounded-xl border border-green-75 p-4 xl:p-6 relative reveal_anim" data-reveal-from="right">
             <svg class="absolute right-3 top-3 rotate-45" xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="#000000" viewBox="0 0 256 256"><path d="M215.39,163.06A8,8,0,0,1,208,168H48a8,8,0,0,1-5.66-14.66l80-80a8,8,0,0,1,11.32,0l80,80A8,8,0,0,1,215.39,163.06Z"></path></svg>
             <span class="text-8xl block mt-12 xl:mt-16 md:text-[140px] font-roboto leading-none font-bold text-green-500 text-center">20</span>
-            <p class="text-sm font-medium">GOOD AWARD WINNING AGRICULTURE</p>
+            <p class="text-sm font-medium">GOOD AWARD WINNING Physiotherapy</p>
           </div>
           <div class="p-4 xl:p-6 relative">
             <a href="about-us.html" class="size-12 bg-yellow-200 rounded-full f-center text-xl"><i class="hgi-stroke hgi-arrow-up-right-01"></i></a>
