--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="WellHub is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
+    <meta name="description" content="WellHub is a modern Physiotherapy and Psychology Rehabilitation theme designed for Physiotherapy, websites. Get a responsive, SEO-friendly design with Spa-focused features." />
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="assets/fonts/hugeicon.min.css" />
     <link rel="stylesheet" href="./assets/css/swiper.min.css" />
     <link rel="stylesheet" href="./assets/css/glightbox.css" />
-    <title>Home - WellHub - Agriculture &amp; Organic Farm HTML Theme</title>
+    <title>Home - WellHub - Physiotherapy &amp; Psychology Rehabilitation HTML Theme</title>
   </head>
 
   <body>
@@ -34,7 +34,7 @@
           <li class="dropdown-item">
             <button class="dropdown-btn">Home <i class="hgi-stroke hgi-arrow-down-01 text-lg"></i></button>
             <ul class="dropdown-menu">
-              <li><a class="menu-link" href="index.html">Agriculture</a></li>
+              <li><a class="menu-link" href="index.html">Physiotherapy</a></li>
               <li><a class="menu-link" href="index-2.html">Agro Service</a></li>
               <li><a class="menu-link" href="index-3.html">Dairy Farm</a></li>
               <li><a class="menu-link" href="index-4.html">Organic Farm</a></li>
@@ -258,14 +258,14 @@
 
     <!-- about section start -->
     <section class="py-120 overflow-hidden">
-      <div class="cont grid grid-cols-12 lg:gap-4 gap-7">
-        <div class="col-span-12 lg:col-span-6 xl:col-span-5 relative xs:flex lg:justify-end">          
-            <div class="fade_anim" data-fade-from="right" data-delay=".4">
+      <div class="cont xs:grid grid-cols-12 lg:gap-4 gap-7">
+        <div class="col-span-12 lg:col-span-6 xl:col-span-5 relative xs:flex lg:justify-end xs:mb-0 mb-7">          
+            <div class="fade_anim w-full" data-fade-from="right" data-delay=".4">
               <img src="assets/images/about/about-big1.webp" class="rounded-xl w-full h-auto lg:max-w-[416px] max-w-[100%]" alt="" />          
               <span class="bg-yellow-300 pb-4 pt-7 mt-[-10px] xxl:px-10 sm:px-5 px-3 w-full text-end block rounded-b-2xl sm:text-md text-sm lg:max-w-[416px] max-w-[100%]">2K+ | satisfied clients</span>
             </div>
             <img src="assets/images/about/about-small1.webp" class="fade_anim border-4 border-neutral-0 bg-neutral-0 lg:absolute bottom-0 left-0 rounded-2xl h-auto lg:max-w-[272px] xs:w-[50%] w-full" alt="about-thumb">
-            <img src="assets/images/about/about-element.png" alt="img" class="absolute top-9 left-0 animate-zoomRotateGlow z-[-1]">
+            <img src="assets/images/about/about-element.png" alt="img" class="absolute top-9 left-0 animate-zoomRotateGlow z-[-1] sm:block hidden">
         </div>
         <div class="col-span-12 lg:col-span-6 lg:col-start-7">
           <p class="sub-heading mb-4 fade_anim"><span class="bg-yellow-300 w-2 h-2 block rounded-full"></span> ABOUT US</p>
@@ -1205,6 +1205,7 @@
       <div class="absolute top-0 left-0 max-w-[1168px] h-full z-[-1] md:block hidden">
         <img src="assets/images/contact/contact1.png" alt="img" class="w-full h-full object-cover">
       </div>
+      <img src="assets/images/element/contact-ele2.png" alt="img" class="absolute end-0 top-[115px] z-[-1] xl:block hidden">
     </section>
     <!-- Contact section end -->
 
