--- a/src/service-details.html
+++ b/src/service-details.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="WellHub is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
+    <meta name="description" content="WellHub is a modern Physiotherapy and Psychology Rehabilitation theme designed for Physiotherapy, websites. Get a responsive, SEO-friendly design with Spa-focused features." />
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="assets/fonts/hugeicon.min.css" />
     <link rel="stylesheet" href="./assets/css/swiper.min.css" />
     <link rel="stylesheet" href="./assets/css/glightbox.css" />
-    <title>Service Details - WellHub - Agriculture &amp; Organic Farm HTML Theme</title>
+    <title>Service Details - WellHub - Physiotherapy &amp; Psychology Rehabilitation HTML Theme</title>
   </head>
 
   <body>
@@ -29,8 +29,8 @@
         <div class="text-neutral-0 relative z-[1] reveal_anim" data-reveal-from="bottom">
           <h2 class="mb-5">Service Details</h2>
           <div class="font-semibold flex justify-center items-center gap-2">
-            <a href="index.html">Home</a> &gt;
-            <span class="text-yellow-200">Service Details</span>
+            <a href="index.html" class="uppercase">Home</a> <i class="hgi hgi-stroke hgi-arrow-right-01"></i>
+            <span class="text-yellow-200 uppercase">Service Details</span>
           </div>
         </div>
       </div>
@@ -81,7 +81,7 @@
                 </li>
               </ul>
               <p class="mb-6">
-                For newcomers, it’s important to start small and scale gradually, learning along the way. By incorporating eco-friendly practices, new farmers can grow food that nourishes both people and the planet. Starting with sustainable farming methods is not only an investment in the future of agriculture but also a commitment to a greener,
+                For newcomers, it’s important to start small and scale gradually, learning along the way. By incorporating eco-friendly practices, new farmers can grow food that nourishes both people and the planet. Starting with sustainable farming methods is not only an investment in the future of Physiotherapy but also a commitment to a greener,
                 healthier world for generations to come.
                 <br />
                 <br />
@@ -183,7 +183,7 @@
             <p class="font-semibold text-2xl mb-5">Categories</p>
             <div class="divide-y divide-neutral-40">
               <a href="#" class="flex w-full justify-between rounded-none items-center duration-300 hover:bg-neutral-0 hover:px-4 py-3.5 hover:rounded-lg gap-3">
-                <p class="m-text font-medium">Agriculture</p>
+                <p class="m-text font-medium">Physiotherapy</p>
                 <i class="hgi-stroke hgi-arrow-right-02 text-xl"></i>
               </a>
               <a href="#" class="flex w-full justify-between rounded-none items-center duration-300 hover:bg-neutral-0 hover:px-4 py-3.5 hover:rounded-lg gap-3">
