--- a/src/shop.html
+++ b/src/shop.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="WellHub is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
+    <meta name="description" content="WellHub is a modern Physiotherapy and Psychology Rehabilitation theme designed for Physiotherapy, websites. Get a responsive, SEO-friendly design with Spa-focused features." />
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./assets/css/swiper.min.css" />
     <link rel="stylesheet" href="./assets/css/slim-select.min.css" />
     <link rel="stylesheet" href="./assets/css/ui-range.min.css" />
-    <title>Shop - WellHub - Agriculture &amp; Organic Farm HTML Theme</title>
+    <title>Shop - WellHub - Physiotherapy &amp; Psychology Rehabilitation HTML Theme</title>
   </head>
 
   <body>
@@ -30,8 +30,8 @@
         <div class="text-neutral-0 relative z-[1] reveal_anim" data-reveal-from="bottom">
           <h2 class="mb-5">Shop</h2>
           <div class="font-semibold flex justify-center items-center gap-2">
-            <a href="index.html">Home</a> &gt;
-            <span class="text-yellow-200">Shop</span>
+            <a href="index.html" class="uppercase">Home</a> <i class="hgi hgi-stroke hgi-arrow-right-01"></i>
+            <span class="text-yellow-200 uppercase">Shop</span>
           </div>
         </div>
       </div>
@@ -249,7 +249,7 @@
             <p class="font-semibold text-2xl mb-5">Categories</p>
             <div class="divide-y divide-neutral-40">
               <a href="#" class="flex w-full justify-between rounded-none items-center duration-300 hover:bg-neutral-0 hover:px-4 py-3.5 hover:rounded-lg gap-3">
-                <p class="m-text font-medium">Agriculture</p>
+                <p class="m-text font-medium">Physiotherapy</p>
                 <i class="hgi-stroke hgi-arrow-right-02 text-xl"></i>
               </a>
               <a href="#" class="flex w-full justify-between rounded-none items-center duration-300 hover:bg-neutral-0 hover:px-4 py-3.5 hover:rounded-lg gap-3">
