--- a/src/about-us.html
+++ b/src/about-us.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="WellHub is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
+    <meta name="description" content="WellHub is a modern Physiotherapy and Psychology Rehabilitation theme designed for Physiotherapy, websites. Get a responsive, SEO-friendly design with Spa-focused features." />
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="assets/fonts/hugeicon.min.css" />
     <link rel="stylesheet" href="./assets/css/swiper.min.css" />
     <link rel="stylesheet" href="./assets/css/glightbox.css" />
-    <title>Home - WellHub - Agriculture &amp; Organic Farm HTML Theme</title>
+    <title>Home - WellHub - Physiotherapy &amp; Psychology Rehabilitation HTML Theme</title>
   </head>
 
   <body>
@@ -28,8 +28,8 @@
         <div class="text-neutral-0 relative z-[1] reveal_anim" data-reveal-from="bottom">
           <h2 class="mb-5">About Us</h2>
           <div class="font-semibold flex justify-center items-center gap-2">
-            <a href="index.html">Home</a> &gt;
-            <span class="text-yellow-200">About Us</span>
+            <a href="index.html" class="uppercase">Home</a> <i class="hgi hgi-stroke hgi-arrow-right-01"></i>
+            <span class="text-yellow-200 uppercase">About Us</span>
           </div>
         </div>
       </div>
@@ -49,7 +49,7 @@
             <a href="contact-us.html" class="btn-primary">Contact us <i class="hgi-stroke hgi-arrow-up-right-01 text-neutral-700"></i></a>
           </div>
           <div class="col-span-12 md:col-span-6 lg:col-span-5 lg:col-start-8">
-            <p class="text-neutral-600">Our journey began with a simple goal: to promote sustainable farming practices that benefit both the land and the people. By working closely with local farmers, we aim to create a community focused on eco-friendly agriculture, innovation, and ensuring a healthier future for all.</p>
+            <p class="text-neutral-600">Our journey began with a simple goal: to promote sustainable farming practices that benefit both the land and the people. By working closely with local farmers, we aim to create a community focused on eco-friendly Physiotherapy, innovation, and ensuring a healthier future for all.</p>
           </div>
         </div>
       </div>
@@ -75,21 +75,21 @@
               <span class="odometer-text"><span data-odometer-final="60" class="odometer">60</span>+</span>
               <p class="font-medium text-base py-1 px-4 absolute right-5 top-1/2 -translate-y-1/2 bg-neutral-0">+ Acres Cultivated</p>
             </div>
-            <p>At Pure Agriculture &amp; Organic Farm, we blend tradition</p>
+            <p>At Pure Physiotherapy &amp; Organic Farm, we blend tradition</p>
           </div>
           <div class="max-w-[250px] fade_anim" data-delay=".2">
             <div class="relative">
               <span class="odometer-text"><span data-odometer-final="50" class="odometer">50</span>+</span>
               <p class="font-medium text-base py-1 px-4 absolute right-5 top-1/2 -translate-y-1/2 bg-neutral-0">+ Products</p>
             </div>
-            <p>At Pure Agriculture &amp; Organic Farm, we blend tradition</p>
+            <p>At Pure Physiotherapy &amp; Organic Farm, we blend tradition</p>
           </div>
           <div class="max-w-[250px] fade_anim" data-delay=".4">
             <div class="relative">
               <span class="odometer-text"><span data-odometer-final="27" class="odometer">27</span>+</span>
               <p class="font-medium text-base py-1 px-4 absolute right-5 top-1/2 -translate-y-1/2 bg-neutral-0">+ Years</p>
             </div>
-            <p>At Pure Agriculture &amp; Organic Farm, we blend tradition</p>
+            <p>At Pure Physiotherapy &amp; Organic Farm, we blend tradition</p>
           </div>
           <div class="max-w-[280px] fade_anim" data-delay=".6">
             <div class="relative">
@@ -354,7 +354,7 @@
       <div class="grid grid-cols-1 sm:grid-cols-2">
         <div class="bg-yellow-50 flex items-center justify-center py-12 lg:rounded-tl-2xl reveal_anim">
           <div class="text-center px-4 xxl:px-12">
-            <h4 class="mb-4">Experience the Beauty of Organic Agriculture</h4>
+            <h4 class="mb-4">Experience the Beauty of Organic Physiotherapy</h4>
             <a href="#" class="font-semibold flex items-center gap-2 justify-center">Learn More <i class="hgi-stroke hgi-arrow-right-02"></i></a>
           </div>
         </div>
