--- a/src/blog-details.html
+++ b/src/blog-details.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="WellHub is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
+    <meta name="description" content="WellHub is a modern Physiotherapy and Psychology Rehabilitation theme designed for Physiotherapy, websites. Get a responsive, SEO-friendly design with Spa-focused features." />
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="assets/fonts/hugeicon.min.css" />
     <link rel="stylesheet" href="./assets/css/swiper.min.css" />
     <link rel="stylesheet" href="./assets/css/glightbox.css" />
-    <title>Blog Details - WellHub - Agriculture &amp; Organic Farm HTML Theme</title>
+    <title>Blog Details - WellHub - Physiotherapy &amp; Psychology Rehabilitation HTML Theme</title>
   </head>
 
   <body>
@@ -28,8 +28,8 @@
         <div class="text-neutral-0 relative z-[1] reveal_anim" data-reveal-from="bottom">
           <h2 class="mb-5">Blog Details</h2>
           <div class="font-semibold flex justify-center items-center gap-2">
-            <a href="index.html">Home</a> &gt;
-            <span class="text-yellow-200">Blog Details</span>
+            <a href="index.html" class="uppercase">Home</a> <i class="hgi hgi-stroke hgi-arrow-right-01"></i>
+            <span class="text-yellow-200 uppercase">Blog Details</span>
           </div>
         </div>
       </div>
@@ -56,7 +56,7 @@
               </div>
               <span class="h-px w-full block bg-neutral-40 mb-7 relative after:absolute after:w-32 after:h-2 after:bg-yellow-200 after:top-full after:left-0 after:-skew-x-[22deg]"></span>
               <p class="m-text text-neutral-600 mb-6">
-                Starting an eco-friendly farm can be a rewarding and sustainable journey, especially for those new to farming. Embracing environmentally conscious practices not only helps protect the planet but also ensures long-term success in agriculture. For newcomers, the first step is to focus on soil health, as healthy soil is the foundation
+                Starting an eco-friendly farm can be a rewarding and sustainable journey, especially for those new to farming. Embracing environmentally conscious practices not only helps protect the planet but also ensures long-term success in Physiotherapy. For newcomers, the first step is to focus on soil health, as healthy soil is the foundation
                 of any thriving farm. Incorporating organic fertilizers, compost, and cover crops can enhance soil fertility naturally, reducing the need for chemical inputs. Crop rotation is another crucial practice that helps maintain soil structure and prevent pest and disease build-up. Additionally, conserving water through efficient irrigation
                 <br />
                 <br />
@@ -68,7 +68,7 @@
                 <img src="./assets/images/blog-details-3.webp" class="reveal_anim rounded-2xl" alt="" data-reveal-from="right" />
               </div>
               <p class="mb-6">
-                For newcomers, it’s important to start small and scale gradually, learning along the way. By incorporating eco-friendly practices, new farmers can grow food that nourishes both people and the planet. Starting with sustainable farming methods is not only an investment in the future of agriculture but also a commitment to a greener,
+                For newcomers, it’s important to start small and scale gradually, learning along the way. By incorporating eco-friendly practices, new farmers can grow food that nourishes both people and the planet. Starting with sustainable farming methods is not only an investment in the future of Physiotherapy but also a commitment to a greener,
                 healthier world for generations to come.
                 <br />
                 <br />
@@ -85,7 +85,7 @@
                 </div>
               </div>
               <p class="m-text text-neutral-600 mb-6">
-                Starting an eco-friendly farm can be a rewarding and sustainable journey, especially for those new to farming. Embracing environmentally conscious practices not only helps protect the planet but also ensures long-term success in agriculture. For newcomers, the first step is to focus on soil health, as healthy soil is the foundation
+                Starting an eco-friendly farm can be a rewarding and sustainable journey, especially for those new to farming. Embracing environmentally conscious practices not only helps protect the planet but also ensures long-term success in Physiotherapy. For newcomers, the first step is to focus on soil health, as healthy soil is the foundation
                 of any thriving farm. Incorporating organic fertilizers, compost, and cover crops can enhance soil fertility naturally, reducing the need for chemical inputs. Crop rotation is another crucial practice that helps maintain soil structure and prevent pest and disease build-up. Additionally, conserving water through efficient irrigation
                 <br />
                 <br />
@@ -209,7 +209,7 @@
             <p class="font-semibold text-2xl mb-5">Categories</p>
             <div class="divide-y divide-neutral-40">
               <a href="#" class="flex w-full justify-between rounded-none items-center duration-300 hover:bg-neutral-0 hover:px-4 py-3.5 hover:rounded-lg gap-3">
-                <p class="m-text font-medium">Agriculture</p>
+                <p class="m-text font-medium">Physiotherapy</p>
                 <i class="hgi-stroke hgi-arrow-right-02 text-xl"></i>
               </a>
               <a href="#" class="flex w-full justify-between rounded-none items-center duration-300 hover:bg-neutral-0 hover:px-4 py-3.5 hover:rounded-lg gap-3">
