--- a/src/faqs.html
+++ b/src/faqs.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="WellHub is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
+    <meta name="description" content="WellHub is a modern Physiotherapy and Psychology Rehabilitation theme designed for Physiotherapy, websites. Get a responsive, SEO-friendly design with Spa-focused features." />
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="assets/fonts/hugeicon.min.css" />
     <link rel="stylesheet" href="./assets/css/swiper.min.css" />
     <link rel="stylesheet" href="./assets/css/glightbox.css" />
-    <title>Faqs - WellHub - Agriculture &amp; Organic Farm HTML Theme</title>
+    <title>Faqs - WellHub - Physiotherapy &amp; Psychology Rehabilitation HTML Theme</title>
   </head>
 
   <body>
@@ -29,8 +29,8 @@
         <div class="text-neutral-0 relative z-[1] reveal_anim" data-reveal-from="bottom">
           <h2 class="mb-5">Faqs</h2>
           <div class="font-semibold flex justify-center items-center gap-2">
-            <a href="index.html">Home</a> &gt;
-            <span class="text-yellow-200">Faqs</span>
+            <a href="index.html" class="uppercase">Home</a> <i class="hgi hgi-stroke hgi-arrow-right-01"></i>
+            <span class="text-yellow-200 uppercase">Faqs</span>
           </div>
         </div>
       </div>
