--- a/src/index-5.html
+++ b/src/index-5.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="WellHub is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
+    <meta name="description" content="WellHub is a modern Physiotherapy and Psychology Rehabilitation theme designed for Physiotherapy, websites. Get a responsive, SEO-friendly design with Spa-focused features." />
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="assets/fonts/hugeicon.min.css" />
     <link rel="stylesheet" href="./assets/css/swiper.min.css" />
     <link rel="stylesheet" href="./assets/css/glightbox.css" />
-    <title>Home - WellHub - Agriculture &amp; Organic Farm HTML Theme</title>
+    <title>Home - WellHub - Physiotherapy &amp; Psychology Rehabilitation HTML Theme</title>
   </head>
 
   <body>
@@ -33,7 +33,7 @@
           <li class="dropdown-item">
             <button class="dropdown-btn">Home <i class="hgi-stroke hgi-arrow-down-01 text-lg"></i></button>
             <ul class="dropdown-menu">
-              <li><a class="menu-link" href="index.html">Agriculture</a></li>
+              <li><a class="menu-link" href="index.html">Physiotherapy</a></li>
               <li><a class="menu-link" href="index-2.html">Agro Service</a></li>
               <li><a class="menu-link" href="index-3.html">Dairy Farm</a></li>
               <li><a class="menu-link" href="index-4.html">Organic Farm</a></li>
