--- a/src/shop-details.html
+++ b/src/shop-details.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="WellHub is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
+    <meta name="description" content="WellHub is a modern Physiotherapy and Psychology Rehabilitation theme designed for Physiotherapy, websites. Get a responsive, SEO-friendly design with Spa-focused features." />
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./assets/css/swiper.min.css" />
     <link rel="stylesheet" href="./assets/css/glightbox.css" />
     <link rel="stylesheet" href="./assets/css/slim-select.min.css" />
-    <title>Shop Details - WellHub - Agriculture &amp; Organic Farm HTML Theme</title>
+    <title>Shop Details - WellHub - Physiotherapy &amp; Psychology Rehabilitation HTML Theme</title>
   </head>
 
   <body>
@@ -30,8 +30,8 @@
         <div class="text-neutral-0 relative z-[1] reveal_anim" data-reveal-from="bottom">
           <h2 class="mb-5">Shop Details</h2>
           <div class="font-semibold flex justify-center items-center gap-2">
-            <a href="index.html">Home</a> &gt;
-            <span class="text-yellow-200">Shop Details</span>
+            <a href="index.html" class="uppercase">Home</a> <i class="hgi hgi-stroke hgi-arrow-right-01"></i>
+            <span class="text-yellow-200 uppercase">Shop Details</span>
           </div>
         </div>
       </div>
@@ -210,7 +210,7 @@
                   <li><strong>Handcrafted with Love:</strong> Crafted with love and attention to detail.</li>
                   <li><strong>Quality Guarantee:</strong> High-quality wicker, ensuring durability and longevity.</li>
                   <li><strong>Customer Satisfaction:</strong> Our products are designed to meet your needs and exceed your expectations.</li>
-                  <li><strong>Supporting Local Farmers:</strong> We support local farmers and encourage sustainable agriculture practices.</li>
+                  <li><strong>Supporting Local Farmers:</strong> We support local farmers and encourage sustainable Physiotherapy practices.</li>
                 </ul>
               </div>
               <div class="tab-panel hidden">
